# devsentinel

./: .env.example  .gitignore  README.md  pyproject.toml
src/devsentinel/: main.py
src/devsentinel/ai/: analyzer.py
src/devsentinel/alerts/: telegram_bot.py
src/devsentinel/monitor/: docker_monitor.py  metrics_collector.py
